edu-demo/edu-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-edu-user-ingress
  namespace: k8s-edu-demo
spec:
  ingressClassName: nginx
  rules:
    - host: "edu-user.211.254.214.132.sslip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-edu-user-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-edu-goods-ingress
  namespace: k8s-edu-demo
spec:
  ingressClassName: nginx
  rules:
    - host: "edu-goods.211.254.214.132.sslip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-edu-goods-service
                port:
                  number: 80
